<resources>
    <string name="app_name">InmobiliariaMiguel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="perfil">Perfil</string>
    <string name="inicio">Inicio</string>
    <string name="inmueble">Inmuebles</string>
    <string name="inquilinos">Inquilinos</string>
    <string name="contratos">Contratos</string>
    <string name="logout">Logout</string>
    <string name="pagos">Pagos</string>
    <string name="yes">Aceptar</string>
    <string name="no">Cancelar</string>
</resources>